@@ -1,7 +1,7 @@
 ;;; gnus-diary.el --- Wrapper around the NNDiary Gnus back end
 
-;; Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005,
-;;   2006, 2007, 2008, 2009  Free Software Foundation, Inc.
+;; Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007,
+;;   2008, 2009  Free Software Foundation, Inc.
 
 ;; Author:        Didier Verna <didier@xemacs.org>
 ;; Maintainer:    Didier Verna <didier@xemacs.org>
@@ -351,7 +351,7 @@ If ARG (or prefix) is non-nil, force prompting for all fields."
 	     (condition-case ()
 		 (nndiary-parse-schedule-value value
 					       (nth 1 head) (nth 2 head))
-	       (t
+	       (error
 		(setq invalid t)))
 	     ;; #### NOTE: this (along with the `gnus-diary-add-header'
 	     ;; function) could be rewritten in a better way, in particular
@@ -378,7 +378,7 @@ If ARG (or prefix) is non-nil, force prompting for all fields."
 	   (condition-case ()
 	       (nndiary-parse-schedule-value value
 					     (nth 1 head) (nth 2 head))
-	     (t
+	     (error
 	      (setq invalid t))))
 	 (gnus-diary-add-header (concat header ": " value))
 	 ))
